--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ edition = "2021"
 [dependencies]
 idek_basics = { path = "../idek_basics" }
 #idek_basics = { git = "https://github.com/Masterchef365/idek-basics.git", rev = "6a3e9c7" }
+
+[profile.release]
+debug = true
